--- a/package.json
+++ b/package.json
@@ -1,1 +1,3 @@
-{"main": "server.js","type":"module","dependencies":{"cors":"^2.8.5","express":"^4.19.2","mongodb":"^6.6.1"}}
+{"main": "server.js" ,"scripts": {
+    "start": "node index.js"
+},"type":"module","dependencies":{"cors":"^2.8.5","express":"^4.19.2","mongodb":"^6.6.1"}}
